Optimized build script, added gradle wrapper and some cleanup